# OrbLite-Agent

./: .gitignore  README.md  pyproject.toml  stepup.py  streamlit_app.py
config/: config.toml  mcp.json
orblite/: config.py  exceptions.py  llm.py  log_utils.py
orblite/agents/: base.py  executor.py  planning.py  react.py  summary.py
orblite/printer/: base.py  console_printer.py
orblite/prompts/: common.py  executor.py  planner.py  summary.py  tool.py
orblite/schemas/: agent_req.py  agent_res.py  base.py  context.py  file.py  memory.py  message.py  tool.py
orblite/service/: base.py  plan_solve_handler.py
orblite/tool/: base.py  tool_collection.py
orblite/tool/common/: file_tool.py  planning.py
orblite/tool/mcp/: mcp_tool.py
orblite/utils/: file_util.py  secrets.py
