[project]
name = "orbliteagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1.6",
    "mcp>=1.26.0",
    "openai>=2.26.0",
    "pydantic>=2.12.5",
    "tenacity>=9.1.4",
    "tiktoken>=0.12.0",
    "streamlit>=1.42.0",
]
